--- a/index.html
+++ b/index.html
@@ -5,40 +5,66 @@
     href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
     rel="stylesheet"
   />
+  <link href="bootstrap-5.3.0-alpha3-dist/css/bootstrap.css"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     * {
       font-family: 'Press Start 2P', cursive;
       box-sizing: border-box;
     }
-
-    body {
-      background-color: black;
+    body{
+      background: black;
+      top:0;
     }
-
-    h1 {
-      margin: 0;
-    }
-
-    button {
-      border: 0;
-      cursor: pointer;
-      font-size: 16px;
-    }
-
-    button:hover {
-      background-color: #ddd;
+    canvas{
+      position:fixed;
     }
     #movableText{
       animation: slider 2s;
     }
+  
     @keyframes slider{
       from { transform: translateX(100px);}
       to { transform:translateX(0px)}
     }
   </style>
-</head>
 
-<div style="display: inline-block; position: relative">
+</head>
+<body style="background-color: black;">
+
+<div class="container" >
+  <div class="row">
+    <div class="col">
+      <img src="./knight.png"></img>
+    </div>
+  <div class="col p-3 mb-2 bg-dark">
+    <img src="menuicon.png" class="img-thumbnail"></img>
+    <div class="btn-group-vertical d-flex justify-content-center flex-column  border border-warning" role="group" aria-label="Vertical button group" >
+    </div>
+  </div>
+  <div class="col">
+    <img src="./knight.png"></img>
+  </div>
+    <!-- Content here -->
+  </div>
+  <div class="row">
+    <div class="col fs-1 text-bg-light text-center">
+      League Of Legends
+    </div>
+  </div>
+</div>
+
+</div>
+</div>
+<div style="display: inline-block; position: relative;  
+
+background-color: red;
+/* Center vertically and horizontally */
+position: absolute;
+
+
+
+">
   <div
     id="overlappingDiv"
     style="
@@ -58,17 +84,14 @@
  
   <div
     id="characterDialogueBox"
-    style="
-      background-color: white;
-      height: 140px;
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      border-top: 4px black solid;
-      display: none;
-      padding: 12px;
-    "
+   class="align-text-bottom"
+   style = "background-color: white;
+   width: 100%;
+   position: relative;
+   bottom: 10px
+   left: 50px;
+   border: 4px black solid;
+   padding: 12px;"
   ></div>
 
   <div id="userInterface" style="display: none">
@@ -184,6 +207,10 @@
     </div>
   </div>
 </div>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+</body>
+
 <script
   src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"
   integrity="sha512-6+YN/9o9BWrk6wSfGxQGpt3EUK6XeHi6yeHV+TYD2GR0Sj/cggRpXr1BrAQf0as6XslxomMUxXp2vIl+fv0QRA=="
@@ -196,6 +223,7 @@
   crossorigin="anonymous"
   referrerpolicy="no-referrer"
 ></script>
+<script src = "data/gates.js"></script>
 <script src = "js/items.js"></script>
 <script src ="data/enemys.js"></script> 
 <script src="data/doors.js"></script>
@@ -211,3 +239,4 @@
 <script src="index.js"></script>
 <script src="battleScene.js"></script>
 <script src ="dialogueScene.js"></script>
+
